# flodata

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md
src/: builder.rs  expand.rs  field.rs  filter.rs  lib.rs  value.rs
tests/: integration.rs
